force-app/main/default/objects/DebugLog__e/DebugLog__e.object-meta.xml
<CustomObject>
    <label>Debug Log</label>
    <pluralLabel>Debug Logs</pluralLabel>
</CustomObject>