force-app/main/default/objects/DebugLog__e/fields/LogMessage__c.field-meta.xml
<CustomField>
    <fullName>LogMessage__c</fullName>
    <label>Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>